After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704750 - egl: don't bind the wayland display if the extension is not available
egl: don't bind the wayland display if the extension is not available
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
wayland 3.10
Depends on:
Blocks:
 
 
Reported: 2013-07-23 15:12 UTC by Giovanni Campagna
Modified: 2013-09-16 18:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
egl: don't bind the wayland display if the extension is not available (1.22 KB, patch)
2013-07-23 15:12 UTC, Giovanni Campagna
none Details | Review

Description Giovanni Campagna 2013-07-23 15:12:03 UTC
When running in a purely swrast environment (such as with
LIBGL_ALWAYS_SOFTWARE), the extension is not exposed by mesa,
but wayland is still possible with wl_shm.
Comment 1 Giovanni Campagna 2013-07-23 15:12:06 UTC
Created attachment 249901 [details] [review]
egl: don't bind the wayland display if the extension is not available
Comment 2 Giovanni Campagna 2013-09-12 16:19:22 UTC
Marking for review for 3.10, because this blocks running mutter-wayland on any form of SW rendering.
Comment 3 Neil Roberts 2013-09-16 18:00:12 UTC
I've pushed the patch to the master and 1.16 branches.

I think we also need some way to report that the extension isn't available, perhaps via a feature flag. We should also make cogl_texture_2d_new_from_wayland_buffer fail with an error instead of crashing in that case. But those are both separate issues.